<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.openhtmltopdf</groupId>
  <artifactId>openhtmltopdf-parent</artifactId>
  <version>1.0.4-SNAPSHOT</version>

  <packaging>pom</packaging>

  <name>Openhtmltopdf</name>
  <description>Open-HTML-to-PDF is a HTML and CSS renderer written in Java.  It supports Java2D and PDF output. Open-HTML-to-PDF is a fork of Flying-saucer with additional features.</description>

  <url>https://github.com/danfickle/openhtmltopdf</url>

  <licenses>
    <license>
      <name>GNU Lesser General Public License (LGPL), version 2.1 or later</name>
      <url>http://www.gnu.org/licenses/lgpl.html</url>
    </license>
  </licenses>

  <modules>
    <module>openhtmltopdf-core</module>
    <module>openhtmltopdf-slf4j</module>
    <module>openhtmltopdf-examples</module>
    <module>openhtmltopdf-pdfbox</module>
    <module>openhtmltopdf-rtl-support</module>
    <module>openhtmltopdf-svg-support</module>
    <module>openhtmltopdf-java2d</module>
    <module>openhtmltopdf-objects</module>
    <module>openhtmltopdf-mathml-support</module>
    <module>openhtmltopdf-latex-support</module>
    <module>openhtmltopdf-pdfa-testing</module>
  </modules>

  <scm>
    <connection>scm:git:git://github.com/danfickle/openhtmltopdf.git</connection>
    <developerConnection>scm:git:https://github.com/danfickle/openhtmltopdf.git</developerConnection>
    <url>git://github.com/danfickle/openhtmltopdf.git</url>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <repository>
      <id>bintray</id>
      <url>https://api.bintray.com/maven/danfickle/maven/com.openhtmltopdf:openhtmltopdf-parent</url>
    </repository>
  </distributionManagement>

  <developers>
    <developer>
      <id>danfickle</id>
      <name>Daniel Fickling</name>
      <email>newtab@gmail.com</email>
    </developer>
    <developer>
      <id>pdoubleya</id>
      <name>Patrick Wright</name>
      <email>pdoubleya@gmail.com</email>
    </developer>
    <developer>
      <id>peter.brant</id>
      <name>Peter Brant</name>
      <email>peter.brant@gmail.com</email>
    </developer>
  </developers>

  <profiles>
    <profile>
      <id>doclint-java8-disable</id>
      <activation>
        <jdk>[1.8,)</jdk>
      </activation>
      <properties>
        <javadoc.opts>-Xdoclint:none</javadoc.opts>
      </properties>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${open.deploy.plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    
    <plugins>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.2</version>
        <configuration>
          <useReleaseProfile>false</useReleaseProfile>
          <releaseProfiles>release</releaseProfiles>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <source>8</source>
          <doclint>none</doclint>
          <additionalparam>${javadoc.opts}</additionalparam>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <properties>
    <open.deploy.plugin.version>3.0.0-M1</open.deploy.plugin.version>
    <open.batik.version>1.12</open.batik.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

</project>
